# monorepo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .lefthook.yml  .ncurc.json  .npmrc  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTING.md  Cargo.toml  MONOREPO.md  README.md  TASKS.md  biome.json  build-templates.sh  compose.yaml  degit.json  go.mod  hugo.yaml  makezip.sh  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-linter.tsx  tsconfig.json
.moon/: tasks.yml  toolchain.yml  toolchains.yml  workspace.yml
.qwen/: settings.json
apps/rust-ai/: .env.example  Cargo.toml  Dockerfile  README.md  moon.yml
apps/rust-ai/migrations/: 20250714000000_create_users_table.sql
apps/rust-ai/src/: lib.rs  main.rs
apps/rust-ai/src/core/: env.rs  logging.rs  response.rs
apps/rust-ai/src/model/: mod.rs  user.rs
apps/rust-ai/src/repository/openai/: greeting.rs  mod.rs
apps/rust-ai/src/router/: mod.rs  openai.rs
apps/rust-ai/tests/: golden.rs
apps/rust-clean/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  moon.yml
apps/rust-clean/src/: lib.rs  main.rs
apps/rust-clean/src/config/: env.rs
apps/rust-clean/src/domain/: auth.rs  error.rs  mod.rs  response.rs  user.rs
apps/rust-clean/src/repository/: mod.rs
apps/rust-clean/src/repository/postgres/: auth.rs  mod.rs  user.rs
apps/rust-clean/src/rest/: auth.rs  mod.rs  root.rs  user.rs
apps/rust-clean/src/rest/middleware/: jwt.rs  mod.rs
apps/rust-clean/src/service/: auth.rs  mod.rs  user.rs
apps/rust-clean/src/utils/: jwt.rs  mod.rs  password.rs
apps/rust-clean/tests/: golden.rs
apps/rust-modular/: .env.example  Cargo.toml  Dockerfile  README.md  moon.yml
apps/rust-modular/benches/: session_middleware.rs
apps/rust-modular/migrations/: 20260409000001_initialize_schema.sql  20260409000005_create_refresh_tokens_table.sql  20260409000006_create_one_time_tokens_table.sql
apps/rust-modular/src/: lib.rs  main.rs  openapi.rs
apps/rust-modular/src/apputils/: generator.rs  jwt.rs  mod.rs  validation.rs
apps/rust-modular/src/cli/: mod.rs
apps/rust-modular/src/config/: defaults.rs  mod.rs  types.rs
apps/rust-modular/src/domain/: mod.rs  response.rs
apps/rust-modular/src/mailer/: mod.rs
apps/rust-modular/src/middleware/: mod.rs
apps/rust-modular/src/modules/auth/: handler.rs  mod.rs  models.rs  module.rs  repository.rs  schema.rs
apps/rust-modular/src/modules/user/: handler.rs  mod.rs  models.rs  module.rs  repository.rs
apps/rust-modular/src/server/: mod.rs
apps/rust-modular/tests/: integration_auth.rs  integration_mailer.rs  smoke_boot.rs
apps/rust-modular/tests/common/: mod.rs
apps/templates-cli/: Cargo.toml  README.md
apps/templates-cli/src/: common.rs  lib.rs  main.rs
apps/templates-cli/src/builders/: mod.rs
apps/templates-cli/src/commands/: build.rs  makezip.rs  mod.rs
apps/templates-cli/tests/: integration_pipeline.rs
builder/: astro.sh  expo-app.sh  fastapi-ai.sh  go-clean.sh  go-modular.sh  nextjs-app.sh  react-app.sh  react-ssr.sh  shared-ui.sh  strapi-cms.sh  tanstack-start.sh  vue-app.sh
content/: _index.md
data-pipeline/: main.py  moon.yml
docker/: compose-instrumentation.yaml  compose-mailpit.yaml  compose-valkey.yaml  compose.yaml  nginx-static.conf  sws-mpa.toml  sws.toml
docsite/: README.md  credits.txt  go.mod  hugo.yaml
infrastructure/: README.md
internal/: cli.ts
public/: index.html
static/: manifest.json  sw.js
template-ansible/: hardening-bastion.yml  inventory.ini  template.yml
template-astro/: Dockerfile  astro.config.mjs  biome.json  moon.yml  package.json  tsconfig.json
template-data-pipeline/: .env.example  moon.yml  pyproject.toml
template-fastapi-ai/: .env.example  README.md  moon.yml  pyproject.toml  template.yml
template-fastapi-ai/app/: main.py
template-fastapi-ai/app/core/: database.py  exception.py  logging.py  response.py
template-fastapi-ai/app/database/migration/versions/: aaa855df33f1_create_table_users.py
template-fastapi-ai/app/database/seeder/: user.py
template-fastapi-ai/app/repository/openai/: greeting.py
template-fastapi-ai/app/router/: main.py  openai.py
template-fastapi-ai/app/schemas/: user.py
template-fastapi-ai/app/services/: greeting.py
template-fastapi-ml/: moon.yml
template-gitlab-cicd/: template.yml
template-golang/: .env.example  .mockery.yml  Dockerfile  README.md  air.toml  go.mod  go.sum  main.go  moon.yml  template.yml
template-load-balancer/: README.md  default.conf  deploy.sh  docker-compose-nginx.yml  nginx.conf  ssl.sh  template.yml
template-ml-app/: README.md  moon.yml  pyproject.toml  template.yml
template-monitoring/: monitoring.yml  promtail-nginx.yml  template.yml
template-nextjs/: Dockerfile  README.md  biome.json  linter-test.tsx  moon.yml  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.mts
template-opentofu/: io.tf  main.tf  moon.yml  template.yml  terraform.auto.tfvars
template-postgresql/: postgresql.yml  postgresql_large.conf  postgresql_medium.conf  postgresql_small.conf  template.yml
template-react-app/: Dockerfile  README.md  biome.json  index.html  moon.yml  package.json  playwright.config.ts  react-router.config.ts  template.yml  tsconfig.json  vite.config.ts
template-react-ssr/: Dockerfile  moon.yml  package.json  playwright.config.ts  server.mjs  template.yml  tsconfig.json  vite.config.ts
template-shared-ui/: .ncurc.json  README.md  moon.yml  package.json  template.yml  tsconfig.json  vite.config.ts
templates/fastapi-ai/: .env.example  CONTRIBUTING.md  Dockerfile  README.md  moon.yml  pyproject.toml
templates/fastapi-ai/app/: main.py
templates/fastapi-ai/app/core/: env.raw.py  instrumentation.py  logging.py  logging.raw.py  response.py
templates/fastapi-ai/app/database/migration/: env.py
templates/fastapi-ai/app/database/migration/versions/: 989eb3ef44de_create_users_table.py
templates/fastapi-ai/app/model/: user.raw.py
templates/fastapi-ai/app/repository/openai/: dependency.py  greeting.py
templates/fastapi-ai/app/router/: root.py
(+1673 files in other folders)
