[project]
name = "zog-ai-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.40",
    "psycopg[binary]>=3.2.6",
    "openai>=v1.75.0",
    "asyncpg>=0.30.0",
    "alembic>=1.6.1",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.22.1",
]
