[project]
name = "{{ package_name | kebab_case }}"
version = "0.1.0"
description = "{{ package_description }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "openai>=v1.93.0",
    "asyncpg>=0.30.0",
    "alembic>=1.6.2",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.22.1",
]
